Prevent jump when border change on error fields

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -12,8 +12,8 @@
   color: $color-input;
   background-color: $color-input-bg;
   background-clip: padding-box;
-  border: 2px solid $color-input-bg; 
-  
+  border: 2px solid $color-input-bg;
+
   // Unstyle the caret on `<select>`s in IE10+.
   &::-ms-expand {
     background-color: transparent;
@@ -24,15 +24,15 @@
     border: 2px solid $color-yellow;
     outline: 0;
     color: $color-black;
-  } 
-  
+  }
+
   // Placeholder
   &::placeholder {
-    color: $color-input; 
+    color: $color-input;
     // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
     opacity: 1;
-  } 
-  
+  }
+
   // Disabled and read-only inputs
   //
   // HTML5 says that controls under a fieldset > legend:first-child won't be
@@ -40,7 +40,7 @@
   // don't honor that edge case; we style them as disabled anyway.
   &:disabled,
   &[readonly] {
-    background-color: $color-gray-light; 
+    background-color: $color-gray-light;
     // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
     opacity: 1;
 
@@ -50,7 +50,7 @@
   }
 
   &--error {
-    border: 1px solid $color-error;
+    border-color: $color-error;
     box-shadow: 0 3px 0 0 $color-error;
     padding-right: 2.625rem;
     background-position: center right .625rem;
@@ -59,6 +59,10 @@
 
     &-textarea {
       background-position: top .5rem right .625rem;
+    }
+
+    &:focus {
+      outline: 1px solid $color-yellow;
     }
   }
 
@@ -74,7 +78,7 @@ select.form-control  {
   padding-right: 2.625rem;
   background-position: center right .625rem;
   background-size: 1.25rem 1.25rem;
-  
+
   /*for firefox*/
   -moz-appearance: none;
   /*for chrome*/
@@ -95,7 +99,7 @@ select.form-control  {
     background-color: $color-input-bg;
   }
 
-  &[disabled] { 
+  &[disabled] {
     background-color: $color-gray-light;
     opacity: 0.6;
   }
@@ -155,7 +159,7 @@ select.form-control  {
 
 .custom-control__input {
   position: absolute;
-  z-index: -1; 
+  z-index: -1;
   // Put the input behind the label so it doesn't overlay text
   opacity: 0;
 
@@ -182,7 +186,7 @@ select.form-control  {
 .custom-control__label {
   margin-bottom: 0;
   font-weight: 400;
-  cursor: pointer; 
+  cursor: pointer;
 
   // Background-color
   &::before {
@@ -197,8 +201,8 @@ select.form-control  {
     background-color: $color-white;
     border: 2px solid $color-purple-dark;
     content: "";
-  } 
-  
+  }
+
   // Foreground (icon)
   &::after {
     position: absolute;
